# personal_site

./: dune-project
_build/: .db  .digest-db  log
_build/default/: personal_site.dune-package  personal_site.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.js/default/abstract_algebra/: abstract_algebra.cma.js
_build/default/.js/default/angstrom/: angstrom.cma.js
_build/default/.js/default/async.async_command/: async_command.cma.js
_build/default/.js/default/async.async_quickcheck/: async_quickcheck.cma.js
_build/default/.js/default/async.async_rpc/: async_rpc.cma.js
_build/default/.ppx/09b7b7af50c44015173cb4c7b01a71c7/: dune__exe___ppx.cmo
_build/default/.ppx/15e1fef64fb8d54202e5b4339b643773/: dune__exe___ppx.cmo
_build/default/.ppx/42c28495dccd0caa55848cf8f98703ba/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmo
_build/default/frontend/: dune  frontend.ml  frontend.pp.ml  frontend.pp.mli
_build/default/frontend/.frontend.eobjs/byte/: dune__exe__Frontend.cmi  dune__exe__Frontend.cmo  dune__exe__Frontend.cmt  dune__exe__Frontend.cmti
_build/default/frontend/.frontend.eobjs/jsoo/: dune__exe__Frontend.cmo.js  frontend.bc.runtime.js
_build/default/frontend/.merlin-conf/: exe-frontend
_build/default/lib/views/: index.mli  index.pp.ml  index.pp.mli  views.cma  views.cmxa  views.cmxs  views.ml-gen
_build/default/test/.merlin-conf/: exe-test_personal_site
frontend/: dune  frontend.ml
lib/templates/: base.jinja
lib/views/: dune  index.ml
(+267 files in other folders)
