(executable
 (name frontend)
 (modes js)
 (libraries
   bonsai
   bonsai.extra
   bonsai.web
   bonsai.web_ui_form
   js_of_ocaml
   ppx_typed_fields.typed_fields_lib
   ppx_typed_fields.typed_variants_lib
   vdom
 )
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx ppx_typed_fields ppx_css bonsai.ppx_bonsai))
)
